2011-01-12   Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: clustered '-d' not recognized in YFLAGS
	This change fixes automake bug#7828.
	* doc/automake.texi (Yacc and Lex): Document that automake
	recognizes '-d' in AM_YFLAGS only if it's not clustered with
	other options.
	From a report by Юрий Пухальский.

2011-01-10   Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add checks on automatically-distributed files
	Related to automake bug#7819.
	* tests/autodist.test: New test.
	* tests/autodist-subdir.test: Likewise.
	* tests/autodist-acconfig.test: Likewise.
	* tests/autodist-acconfig-no-subdir.test: Likewise.
	* tests/autodist-aclocal-m4.test: Likewise.
	* tests/autodist-config-headers.test: Likewise.
	* tests/autodist-configure-no-subdir.test: Likewise.
	* tests/autodist-stamp-vti.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-01-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: work around a texi+cygnus bug causing a spurious XFAIL
	* tests/txinfo5b.test: New test, like txinfo5.test but calling
	automake with the `-Wno-override' option to work around a bug
	in the texinfo + cygnus interaction.
	* tests/txinfo5.test: Update heading comments.
	* tests/Makefile.am (TEST): Updated.

2011-01-09  Dave Hart  <davehart@gmail.com>  (tiny change)

	Fix another typo in Rule.pm comment.
	* lib/Automake/Rule.pm: Fix typo.

2011-01-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Improve, extend and tweak tests on Texinfo support.
	* tests/instdir-texi.test: Add a call to `ls -l' after that to
	`make', for debugging.  When looking for required tools, do not
	redirect the output of "$tool --help" to /dev/null, and do not
	uselessly run it in a subshell.
	* tests/txinfo.test: Rewritten to run autoconf, ./configure and
	make.  All checks moved into Makefile.am.
	* tests/txinfo8.test: Likewise, and modernize the generated
	configure.in.
	* tests/txinfo2.test: Moved checks into Makefile.am, and other
	minor improvements.