@@ -39,6 +39,8 @@ END
 : > foo.f
 : > bar.c
 : > baz.cc
+: > config.guess
+: > config.sub
 
 $ACLOCAL
 $AUTOMAKE
