@@ -48,6 +48,8 @@ zardoz_LDADD = @FLIBS@
 END
 
 : > zardoz.f
+: > config.guess
+: > config.sub
 
 $ACLOCAL
 $AUTOMAKE
