@@ -1,3 +1,13 @@
+2011-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Avoid testsuite failures due to Autoconf Fortran change.
+	Autoconf v2.68-21-g727ce95 causes AC_F77_LIBRARY_LDFLAGS to
+	require computing the canonical host name.  Ensure config.guess
+	and config.sub files are present for respective checks.
+	* tests/compile_f_c_cxx.test: Add stub files.
+	* tests/flibs.test: Likewise.
+	* tests/fort4.test: Use $AUTOMAKE -a for installing files.
+
 2011-01-12   Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	docs: clustered '-d' not recognized in YFLAGS
